fixes for the desktop version and general spacing tweaks

--- a/bicycleparking/static/src/style/mobilesheet.css
+++ b/bicycleparking/static/src/style/mobilesheet.css
@@ -53,6 +53,9 @@ h1 {
     padding-bottom: 0vh;
     font-size: calc(9vw + 3vh);
 }
+
+/*BETA_LABELS___________________________________________________________*/
+
 .betaMain {
     font-weight: bold;
     margin: 15vh auto 0vh auto;
@@ -78,6 +81,8 @@ h1 {
     margin: -10vh 0vh 0vh auto;
     text-align: center;
 }
+
+/*FONT_STYLING___________________________________________________________*/
 
 h2 {
     font-size: 5vw;
@@ -127,15 +132,17 @@ header{
     width: 30vh;
 }
 
+/*ERROR_MESSAGES___________________________________________________________*/
+
 #error {
     position: fixed;
     z-index: 10;
     margin-top: -11vh;
     width: calc(100% - 2vh);
-    height: 8vh;
-    background-color: #Fff;
+    height: 7.8vh;
+    background-color: #fff;
     border-style: solid;
-    border-color: #F24722;
+    border-color: #ed145b;
     padding-bottom: 0.5vh;
     border-width: 1vh;
 }
@@ -536,23 +543,22 @@ input{
     padding-left: 0vw;
 }
 
-/* David Cox: I think this is part of the code that was broken. commenting out for now.
+/*COMMENT_BOXES___________________________________________________________*/
 
-.datepicker{
-    opacity: 1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}*/
 .comments{
-    width: 90%;
     font-weight: thin;
-    font-size: 4vw;
+    font-size: 5vw;
+    width: 96%;
     height: 50vh;
-    padding-left: 4vw;
-    padding-right: 4vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
     padding-bottom: 3vh;
-    margin-right: 5%;
-    margin-left: 5%;
+    padding-top: 1vw;
+    margin-top: 2vw;
+    margin-left: 2%;
     background-color: white;
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 0px;
 }
